--- a/codejam/index.css
+++ b/codejam/index.css
@@ -1,43 +1,52 @@
 *{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+    padding :0;
+    margin:0;
+    box-sizing: border-box ;
+
 }
 .container{
     height: 100vh;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-.card{
-    width: 20%;
-    display: flex;
-    flex-direction: column;
-}
-.card-one{
-    width: 100%;
+    width:100vh;
+    display:flex;
+    align-items:center;
+    justify-content:centers;
+
 
 }
-.card-one img{
-    width: 100%;
+.card{
+    width:20;
+    display:flex;
+    flex-direction :   column;
+
+}
+.card-one{
+    width:100%;
+
+
+}
+.card-one img
+{
+width:100%;
+
 }
 .card-two{
     width: 100%;
-    padding: 1rem;
-    box-shadow: rgba(0,0,0,0.35) 0px 5px 15px;
+    padding:1ren;
+    border: 2px solid black;
+
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 .card-two h1{
-    font-size: 1.5rem;
+    font-size:1.5ren;
 }
 .card-two h2{
-    font-size: 1.2rem;
-    margin-bottom: 1rem;
-    color: grey;
+    font-size:1.2ren;
 }
 .card-two a{
-    text-decoration: none;
-    background-color: black;
-    color: white;
-    padding: 5px 10px;
+    text-decoration: name;
+    background-attachment:black ;
+    color:white;
+    padding:5px 10px;
+
+
 }
